# random-cpp

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
include/: randomcpp.hpp
include/randomcpp/: random.hpp
src/: random.cpp
test/: integers.cpp  random.cpp  real_values.cpp  sequences.cpp
